# PainAnalyzer

./: .gitignore  CMakeLists.txt  PainAnalyzer.qmlproject  PainAnalyzer.qrc  build_apk.py  dependencies.cmake  resource.qrc
PainAnalyzer/: Constants.qml  qmldir
PainAnalyzer/designer/: plugin.metainfo
PainAnalyzerContent/: App.qml  Head.qml  HeadModel.qml  HeadScreen.qml  Scene3D.qml  Screen01.qml  Screen01.ui.qml  Screen02.ui.qml  SelectionDialog.qml  SymptomsScreen.qml  TriggerScreen.qml
PainAnalyzerContent/AutorizationForms/: BaseInfo.qml  FIO.qml  Phone.qml
backend/: CMakeLists.txt  conanfile.py
backend/include/app/: AppContext.h
backend/include/database/: ConnectionPool.h  Database.h  queries.hpp
backend/include/database/repositories/: AuthRepository.h
backend/include/domain/auth/: Token.h
backend/include/handlers/: AuthHandlers.h
backend/include/http/: Router.h  Server.h  Session.h
backend/include/http/routes/: RegisterRoutes.h
backend/include/service/: AuthService.h
backend/include/utils/: alias.h  load_dotenv.h
backend/src/: DataBase.cpp  DataBase.h  main.cpp
backend/src/database/: ConnectionPool.cpp  DataBase.cpp  DataBase.h
backend/src/database/repositories/: AuthRepository.cpp
backend/src/handlers/: AuthHandlers.cpp
backend/src/http/: Router.cpp  Server.cpp  Session.cpp
backend/src/http/routes/: RegisterRoutes.cpp
backend/src/service/: AuthService.cpp
backend/src/utils/: load_dotenv.cpp
cmake/: conan_bootstrap.cmake
common/: CMakeLists.txt
common/include/models/: User.h
conan_profiles/: android-arm64  linux-gcc15
core/: CMakeLists.txt
core/assets/meshes/: mesh_0_003_mesh.mesh  mesh_0_004_mesh.mesh  mesh_0_007_mesh.mesh
core/src/user/: UserManager.cpp
frontend/: CMakeLists.txt  build_apk.py  conanfile.py
frontend/core/: CMakeLists.txt
frontend/core/include/auth/: AuthService.h
frontend/core/include/models/: User.h
frontend/core/include/network/: ApiClient.h  AuthManager.h  NetworkManager.h
frontend/core/include/user/: UserManager.h  UserService.h
frontend/core/src/auth/: AuthService.cpp
frontend/core/src/network/: ApiClient.cpp  AuthManager.cpp  NetworkManager.cpp
frontend/patient/: CMakeLists.txt  resource.qrc
frontend/patient/android/: AndroidManifest.xml
frontend/patient/assets/meshes/: mesh_0_002_mesh.mesh  mesh_0_008_mesh.mesh  mesh_0_010_mesh.mesh  mesh_0_011_mesh.mesh  mesh_0_012_mesh.mesh  mesh_0_013_mesh.mesh  mesh_0_014_mesh.mesh
frontend/patient/qml/: App.qml  AurasScreen.qml  DrugScreen.qml  HeadModel.qml  History.qml  Menu.qml  Screen01.qml  SelectionDialog.qml  SymptomsScreen.qml  TriggerScreen.qml
frontend/patient/qml/AutorizationForms/: BaseInfo.qml  FIO.qml  Phone.qml
frontend/patient/src/: PatientManager.cpp  PatientManager.h  main.cpp  patient.cpp
meshes/: mesh_0_mesh3.mesh
models/: head.glb
models/meshes/: mesh_0_001_mesh.mesh  mesh_0_006_mesh.mesh
patient/: CMakeLists.txt  resource.qrc
patient/assets/meshes/: mesh_0_005_mesh.mesh
patient/qml/: App.qml  PainTypeScreen.qml  Scene3D.qml  Screen01.qml  SymptomsScreen.qml  TriggerScreen.qml
patient/qml/AutorizationForms/: BaseInfo.qml  FIO.qml  Phone.qml
patient/src/: PatientManager.h  patient.cpp
src/: main.cpp  record.cpp  record.h  user.cpp  user.h
